tests/patching/errors/save_wrong_buffer.dby
import std.buffer as buf
buf.save("out.bin", b"\x01")
